<resources>
    <string name="app_name">uniapp</string>
    <string name="loginButtonName">Login</string>
    <string name="callGLCA">Call</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="register">Register</string>
    <string name="agedPerson">Aged Person</string>
    <string name="youngPerson">Young Person</string>
    <string name="userName">User Name</string>
    <string name="age">Age</string>
    <string name="localization">Localization</string>
    <string name="signUp">Sign Up</string>
    <string name="loginSuccess">Login Successful</string>
    <string name="registrationSuccess">Registration Successful</string>
</resources>